[package]
name = "crab-tv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.9"
rgb = "0.8.25"
lodepng = "3.4"
rand = "0.8.4"
flume = "0.8.4"
eframe = { version = "0.14.0", features = ["persistence"] }
egui = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.22", features = ["derive"] }
glam = { version = "0.20.0", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
